--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "httpx[socks]>=0.27.2",
     "loguru>=0.7.2",
     "pydantic>=2.9.2",
+    "python-telegram-bot>=21.6",
     "schedule>=1.2.2",
 ]
